Filter data based on desired values

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,12 @@
 </head>
 <body>
     <h1>Hi</h1>
+    <form class='userform'>
+        <label for="search">Search</label>
+        <input type="text" name="category" id="category">
+        <button type="submit">Submit Form</button>
+    </form>
 
 </body>
+<script src='script.js'></script>
 </html>
-HI
