search bar, header, ids

--- a/public/index.html
+++ b/public/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -5,17 +6,11 @@
     <title>Saamia Bashir, Julia Escarda, Rida Habib - Assignment 1</title>
 </head>
 <body>
-<<<<<<< Updated upstream
-    <h1>Hi</h1>
-    <form class='userform'>
-        <label for="search">Search</label>
-        <input type="text" name="category" id="category">
-        <button type="submit">Submit Form</button>
-    </form>
-
-=======
     <h1>Saamia Bashir, Julia Escarda, Rida Habib - Assignment 1</h1>
->>>>>>> Stashed changes
+    <form class="userform">
+        <label for="category">Search</label>
+        <input type="text" id="category" name="category" placeholder="Type of restaurant"></input> 
+    </form>
 </body>
-<script src='script.js'></script>
+<script>src="script.js"</script>
 </html>
