--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
-    <link rel='stylesheet' href='style.css'/>
+    <link rel='stylesheet' href='style.css'>
     <title>Saamia Bashir, Julia Escarda, Rida Habib - Assignment 1</title>
 </head>
 <body>
@@ -11,7 +11,9 @@
     <form class="userform">
         <label for="category">Search</label>
         <input type="text" id="category" name="category" placeholder="Type of restaurant"></input> 
+        <button type="submit">Submit</button>
     </form>
+    <div class="filtered" id="filtered"></div>
 </body>
 <script>src="script.js"</script>
 </html>
