adding the first bulma thing

--- a/public/index.html
+++ b/public/index.html
@@ -12,9 +12,9 @@
     <form class="userform">
         <label for="category">Search</label>
         <input type="text" id="category" name="category" placeholder="Type of restaurant"></input> 
-        <button type="submit">Submit</button>
+        <button type="submit" class="button is-primary">Submit</button> <!--> This is using bulma to style the button.-->
     </form>
-    <div class="filtered" id="filtered"></div>
+    <div class="filtered" id="filtered"></div> 
 </body>
 <script>src="script.js"</script>
 </html>
