--- a/public/index.html
+++ b/public/index.html
@@ -4,17 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
-    <link rel='stylesheet' href='style.css'>
+    <link rel="stylesheet" href="styles.css" />
     <title>Saamia Bashir, Julia Escarda, Rida Habib - Assignment 1</title>
 </head>
 <body>
+    <div class="container">
     <h1>Saamia Bashir, Julia Escarda, Rida Habib - Assignment 1</h1>
     <form class="userform">
         <label for="category">Search</label>
         <input type="text" id="category" name="category" placeholder="Type of restaurant"></input> 
-        <button type="submit" class="button is-primary">Submit</button> <!--> This is using bulma to style the button.-->
+        <button type="submit" class="button is-black">Submit</button> <!-- This is using bulma to style the button.-->
     </form>
     <div class="filtered" id="filtered"></div> 
+        </div>
 </body>
 <script>src="script.js"</script>
 </html>
