--- a/public/index.html
+++ b/public/index.html
@@ -18,5 +18,5 @@
     <div class="filtered" id="filtered"></div> 
         </div>
 </body>
-<script>src="script.js"</script>
+<script src="script.js"></script>
 </html>
