--- a/public/index.html
+++ b/public/index.html
@@ -9,11 +9,14 @@
 </head>
 <body>
     <div class="container">
-    <h1>Saamia Bashir, Julia Escarda, Rida Habib - Assignment 1</h1>
+    <h1>Saamia Bashir, Julia Escarda, Rida Habib</h1>
+    <h1 class="assignment">Assignment 1</h1>
     <form class="userform">
+        <div class="flex-outer">
         <label for="category">Search</label>
         <input type="text" id="category" name="category" placeholder="Type of restaurant"></input> 
-        <button type="submit" class="button is-black">Submit</button> <!-- This is using bulma to style the button.-->
+        <button type="submit" class="button is-black buttons has-addons is-right">Submit</button> <!-- This is using bulma to style the button.-->
+        </div>
     </form>
     <div class="filtered" id="filtered"></div> 
         </div>
