--- a/public/index.html
+++ b/public/index.html
@@ -8,15 +8,13 @@
     <title>Saamia Bashir, Julia Escarda, Rida Habib - Assignment 1</title>
 </head>
 <body>
-    <div class="container">
     <h1>Saamia Bashir, Julia Escarda, Rida Habib - Assignment 1</h1>
     <form class="userform">
         <label for="category">Search</label>
         <input type="text" id="category" name="category" placeholder="Type of restaurant"></input> 
         <button type="submit" class="button is-black">Submit</button> <!-- This is using bulma to style the button.-->
     </form>
-    <div class="filtered" id="filtered"></div> 
-        </div>
+    <ul class="target-list"></ul>
 </body>
-<script>src="script.js"</script>
+<script src="script.js"></script>
 </html>
