--- a/public/index.html
+++ b/public/index.html
@@ -10,13 +10,12 @@
 <body>
     <div class="container">
     <h1>Saamia Bashir, Julia Escarda, Rida Habib</h1>
-    <h1 class="assignment">Assignment 1</h1>
     <form class="userform">
         <label for="category">Search</label>
         <input type="text" id="category" name="category" placeholder="Type of restaurant"></input> 
         <button type="submit" class="button is-black">Submit</button> <!-- This is using bulma to style the button.-->
     </form>
-    <ul class="target-list"></ul>
+    <ul class="target-list" id='target'></ul>
 </body>
 <script src="script.js"></script>
 </html>
