my local branch was messed up but fixed so pushing again

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,8 @@
 </head>
 <body>
     <div class="container">
-    <h1>Saamia Bashir, Julia Escarda, Rida Habib</h1>
+    <h1><b>Saamia Bashir, Julia Escarda, Rida Habib</b></h1>
+    <h1 class="assign1"><b>Assignment 1</b></h1>
     <form class="userform">
         <div class="flex-outer">
         <label for="category">Search</label>
@@ -18,6 +19,7 @@
         </div>
     </form>
     <ul class="target-list" id='target'></ul>
+    </div>
 </body>
 <script src="script.js"></script>
 </html>
