--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container">
-    <h1><b>Saamia Bashir, Julia Escarda, Rida Habib</b></h1>
+    <h1 class="member-names"><b>Saamia Bashir, Julia Escarda, Rida Habib</b></h1>
     <h1 class="assign1"><b>Assignment 1</b></h1>
     <form class="userform">
         <div class="flex-outer">
