--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <div class="container">
-    <h1 class="member-names"><b>Saamia Bashir, Julia Escarda, Rida Habib</b></h1>
-    <h1 class="assign1"><b>Assignment 1</b></h1>
+    <h1 class="member-names">Saamia Bashir, Julia Escarda, Rida Habib</h1>
+    <h1 class="assign1">Assignment 1</h1>
     <form class="userform">
         <div class="flex-outer">
         <label for="category">Search</label>
