--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
         <button type="submit" class="button is-black">Submit</button> <!-- This is using bulma to style the button.-->
         </div>
     </form>
-    <ul class="target-list" id='target'></ul>
+    <ul class="target-list"></ul>
     </div>
 </body>
 <script src="script.js"></script>
