removed submit button, fixed placeholder text

--- a/public/index.html
+++ b/public/index.html
@@ -14,8 +14,7 @@
     <form class="userform">
         <div class="flex-outer">
         <label for="category">Search</label>
-        <input type="text" id="category" name="category" placeholder="Type of restaurant"></input> 
-        <button type="submit" class="button is-black">Submit</button> <!-- This is using bulma to style the button.-->
+        <input type="text" id="category" name="category" placeholder="Search categories"></input> 
         </div>
     </form>
     <ul class="target-list"></ul>
